2002-01-06 Stefan Petersen (spe@stacken.kth.se)

	* src/amacro.c: Parser handles negative immediate values.
	* src/draw.c: Load of minor bugfixes after verification like 
	  rotate points in the other direction, line wiidths constant,
	  wrong indeces

2002-01-06 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c: All primitive macros are implemented (though not
	  completely) and passed the MS-test; they compile. Now it's 
	  verify, verify and verify.

	
2001-12-31 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c: Started to add functions to be able to draw
	  aperture macros too. Some aperture macro primitives are 
	  half way implemented, so the examples in the distribution
	  should work. Though not 100% properly.
	
	
2001-12-30 Stefan Petersen (spe@stacken.kth.se)

        * src/amacro.[hc]: Added, even though I haven't executed 
          an aperture macro program yet. But parsing seems stable.
        * src/gerb_image.[hc], gerber.c, src/Makefile.am: Calls 
          and keeps track of parsing of aperture macros.
        * doc/aperturemacro.txt: simple text on the "program code"
          generated when parsing aperture macros.


2001-12-29 Andreas Andersson (e92_aan@e.kth.se)

	* src/gerb_file.c:
	  Fixed gerb_fgetstring() to not write after the end of the
	  allocated array.
	* src/gerber.c:
	  Removed small memory leak in parse_aperture_definition()


2001-12-29 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.c:
	  Autodetection routine changed back to original style to allow
	  special cases needed with output from some CAD systems.
	* src/gerb_file.c:
	  Error check for mmap() added to stop gerbv from segdumping
	  when trying to open a directory instead of a file.


2001-12-29 Stefan Petersen (spe@stacken.kth.se)

	* src/gerb_file.[hc], src/gerber.c: Added function 
	  gerb_fgetstring and used it.

	
2001-12-14 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c : Removed gdk_gc_set_line_attribute when drawing
	  a point.