@@ -3,7 +3,10 @@
 	* src/amacro.c: Parser handles negative immediate values.
 	* src/draw.c: Load of minor bugfixes after verification like 
 	  rotate points in the other direction, line wiidths constant,
-	  wrong indeces
+	  wrong indeces.
+	* src/gerber.c: Rewrote parse_aperture_defintion to handle 
+	  aperture defintions without parameters.
+	
 
 2002-01-06 Stefan Petersen (spe@stacken.kth.se)
 
